# tano

./: .appveyor.yml  .cproject  .gitignore  .gitmodules  .project  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Common.cpp  Common.h  INSTALL  MainWindow.cpp  MainWindow.h  NEWS  README  README.md  Tano.cpp  Tano.h  Toolchain-win32.cmake  Updates.cpp  Updates.h  VERSION  build-package.sh  cmake_uninstall.cmake.in  info.qrc  main.cpp  siol.xml  tano-editor.desktop  tano.desktop  tano.rc  ui_Siol.h
daemon/: CMakeLists.txt  DBusAdaptorRecorder.cpp  DBusAdaptorRecorder.h  DBusAdaptorXmltv.cpp  DBusAdaptorXmltv.h  DaemonCommon.cpp  DaemonCommon.h  DaemonMain.cpp  DaemonMain.h  main.cpp
daemon/recorder/: RecorderCore.cpp  RecorderCore.h  RecorderTimeManager.cpp  RecorderTimeManager.h
daemon/xmltv/: XmltvCore.cpp  XmltvCore.h
editor/: CMakeLists.txt  main.cpp
i18n/: CMakeLists.txt  ast.ts  bs_BA.ts  cs.ts  de.ts  el.ts  fr.ts  hi_IN.ts  hy.ts  ru.ts  sl.ts  source.ts  tr.ts  uk.ts  vi.ts
lang/: CMakeLists.txt  ast.ts  bs_BA.ts  cs.ts  cs_CZ.po  cs_CZ.ts  fr.ts  fr_FR.po  fr_FR.ts  hi_IN.ts  hr_HR.po  hr_HR.ts  it.ts  ru.ts  ru_RU.po  ru_RU.ts  sl.ts  sl_SI.po  sl_SI.ts  source.ts  tano.pot  tano.ts  tano_cs_CZ.po  tano_cs_CZ.ts  tano_empty.pot  tano_empty.ts  tano_ru_RU.po  tano_ru_RU.ts  tano_sl.qm  tano_sl.ts  tano_sl_SI.po  tano_sl_SI.ts  template.ts  uk.ts  uk_UA.po  uk_UA.ts
lib/QPropertyEditor/: CMakeLists.txt  Property.cpp
lib/QVlc/: AudioControl.cpp  AudioControl.h  CMakeLists.txt  Config.h.in  Instance.cpp  Instance.h  SeekWidget.cpp  SeekWidget.h  Version.cpp.in  Version.h  VideoControl.cpp  VideoControl.h  VideoWidget.cpp  VideoWidget.h  VlcConfig.h.in  VlcControl.cpp  VlcControl.h  VlcInstance.cpp  VlcInstance.h  VlcSeekWidget.cpp  VlcSeekWidget.h  VlcVideoWidget.cpp  VlcVideoWidget.h  VlcVolumeSlider.cpp  VlcVolumeSlider.h  VolumeSlider.cpp  VolumeSlider.h
lib/QtKeySequenceEdit/: CMakeLists.txt  QtKeySequenceEdit.cpp  QtKeySequenceEdit.h
lib/qtsingleapplication/: CMakeLists.txt
mobile/: About.cpp  About.h  About.ui  CMakeLists.txt  Config.h  EditSettings.cpp  EditSettings.h  EditSettings.ui  Mobile.cpp  Mobile.h  Mobile.ui  MobileConstants.cpp  MobileConstants.h  MobileCore.cpp  MobileCore.h  MobilePlaylistHandler.cpp  MobilePlaylistHandler.h  MobileXmltvHandler.cpp  MobileXmltvHandler.h  SelectPlaylist.cpp  SelectPlaylist.h  SelectPlaylist.ui  main.cpp  tano-mobile.pro  tanomobile.desktop  tanomobile.pro  tanomobile_harmattan.desktop
mobile/fremantle/: tanomobile.desktop  tanomobile.pro
mobile/harmattan/: tanomobile.desktop  tanomobile.pro
mobile/plugins/: EpgSloveniaPlugin.pro
mobile/qml/: files.qrc  main.qml  tano-mobile.qmlproject
mobile/src/: MobileConstants.cpp  MobileConstants.h  MobileCore.cpp  MobileCore.h  MobileXmltvHandler.cpp  MobileXmltvHandler.h  main.cpp
osx/: CMakeLists.txt  Info.plist.in  deploy.sh.in
plugins/EpgSloveniaPlugin/: CMakeLists.txt  EpgSloveniaPlugin.cpp  EpgSloveniaPlugin.h  EpgSloveniaPluginCreator.cpp  EpgSloveniaPluginCreator.h
plugins/FripPlugin/: CMakeLists.txt  FripPlugin.cpp  FripPlugin.h  FripPluginCreator.cpp  FripPluginCreator.h
plugins/VlcPlugin/: CMakeLists.txt  VlcPlugin.cpp  VlcPlugin.h  VlcPluginCreator.cpp  VlcPluginCreator.h
plugins/sample/: CMakeLists.txt  Sample.cpp  Sample.h  SampleCreator.cpp  SampleCreator.h
plugins/slovenia/: CMakeLists.txt  Slovenia.cpp  Slovenia.h  SloveniaCreator.cpp  SloveniaCreator.h
recorder/: CMakeLists.txt  Recorder.cpp  Recorder.h  RecorderCore.cpp  RecorderCore.h  RecorderDBusAdaptor.cpp  RecorderDBusAdaptor.h  RecorderMain.cpp  RecorderMain.h  RecorderTimeManager.cpp  RecorderTimeManager.h  TimeManager.cpp  TimeManager.h  Timers.cpp  main.cpp
recorder/plugins/: RecorderPlugins.h
src/: CMakeLists.txt  Common.cpp  Common.h  Config.h.in  ConfigPlayer.h.in  MainWindow.cpp  MainWindow.h  ProjectI18N.cmake  ProjectResources.cmake  ProjectSources.cmake  ProjectUi.cmake  Updates.cpp  Updates.h  Ver.cpp.in  Ver.h  main.cpp  windows.rc
src/app/: CMakeLists.txt  tano.desktop  tano.rc.in
src/application/: Arguments.cpp  Arguments.h  CMakeLists.txt  Common.cpp  Common.h  LocalServer.cpp  LocalServer.h  LocaleManager.cpp  LocaleManager.h  Log.cpp  Log.h  Notifications.cpp  Notifications.h  NotificationsOSX.h  Output.cpp  Output.h  Project.rc.in  SingleApplication.cpp  SingleApplication.h  TanoApplication.cpp  TanoApplication.h  Updates.cpp  Updates.h  main.cpp
src/branding/: CMakeLists.txt
src/channels/: Channel.cpp  Channel.h  ChannelEpg.cpp  ChannelEpg.h  EditPlaylist.cpp  EditPlaylist.h
src/common/: Backend.cpp  Backend.h  Common.h  File.h  FreedesktopImage.cpp  FreedesktopImage.h  ListItem.h  ListModel.cpp  ListModel.h  NetworkManager.cpp  NetworkManager.h  Resources.cpp  Resources.h  qtcassert.cpp  qtcassert.h
src/config/: CMakeLists.txt  TanoConfig.cpp  TanoConfig.h
src/container/: CSVInfo.cpp  Channel.cpp  Channel.h  EpgDayList.cpp  EpgDayList.h  EpgItem.cpp  EpgItem.h  EpgShowInfo.cpp  EpgShowInfo.h  File.cpp  File.h  ListItem.h  ListModel.cpp  PlaylistFile.cpp  PlaylistFile.h  Timer.cpp  Timer.h  UpdateInfo.cpp  UpdateInfo.h
src/control/: ChannelSelect.cpp  ChannelSelect.h  Shortcuts.cpp  Shortcuts.h  Time.cpp  Time.h
src/core/: Arguments.cpp  Arguments.h  Backend.cpp  Backend.h  CMakeLists.txt  ChannelSelect.cpp  ChannelSelect.h  Common.cpp  Common.h  ConsoleOutput.cpp  ConsoleOutput.h  CoreSharedExport.h  DaemonManager.cpp  DaemonManager.h  Enums.cpp  Enums.h  File.h  GetFile.cpp  GetFile.h  GetImage.cpp  GetImage.h  Linux.cpp  Linux.h  ListItem.h  ListModel.cpp  ListModel.h  LocaleManager.cpp  LocaleManager.h  Log.cpp  Log.h  NetworkDownload.cpp  NetworkRequest.cpp  (+38 more)
windows/: CMakeLists.txt  InstallerConfig.nsh.in  InstallerFiles.nsh.in  InstallerFilesEditor.nsh.in  InstallerLanguage.nsh  InstallerLanguageEnglish.nsh  InstallerUI.nsh  UninstallLog.nsh  tano-editor.nsi  tano-install-editor.nsh  tano-install.nsh  tano-language.nsh  tano-player.nsi  tano-ui.nsh  tano-uninstall-editor.nsh  tano-uninstall.nsh  tano.nsi
(+1241 files in other folders)
